--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "senior_enrichment",
+  "name": "enrichment",
   "version": "0.0.1",
   "description": "A review time project",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "mocha **/*.test.js *.test.js",
     "build": "webpack",
     "build-watch": "webpack -w",
-    "start": "nodemon server/start.js"
+    "start": "webpack -w & nodemon --watch server -e js,html server/index.js"
   },
   "keywords": [
     "react",
@@ -15,9 +15,11 @@
     "skeleton"
   ],
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
+    "morgan": "^1.9.0",
     "pg": "^6.1.0",
     "pg-native": "^1.10.0",
     "react": "^15.3.2",
